Make sure .visible's are visible.

--- a/src/helpers.css
+++ b/src/helpers.css
@@ -7,7 +7,7 @@
 .center    { display: block; text-align: center; }
 .centered  { float: none; margin-left: auto; margin-right: auto; }
 .clear     { clear: both }
-.visible   { display: inherit }
+.visible   { display: inherit !important }
 .hidden    { display: none }
 .invisible { visibility: hidden }
 
